--- a/intranet/htdocs/intranet-tmpl/admin/global/ver_novedad_intra.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/ver_novedad_intra.tmpl
@@ -1,9 +1,9 @@
 [% USE HTML %]
 <div class="novedad_contacto">
-    <h2>[% 'Titulo' | i18n %]: [% novedad.getTitulo %]</h2>
+    <h2>[% 'Titulo' | i18n %]: [% HTML.escape(novedad.getTitulo) %]</h2>
     <fieldset>
         <legend>[% 'Cuerpo de la novedad' | i18n %]:</legend>
-        <h3>[% novedad.getContenido %]</h3>
+        <h3>[% HTML.escape(novedad.getContenido) %]</h3>
         <h4> [% novedad.getFechaLegible %]</h4>
     </fieldset>
     <a href="#">[% novedad.getFechaLegible %] </a>
