--- a/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/novedades_intra_ajax.tmpl
@@ -29,22 +29,22 @@
                         [% FOREACH novedad IN novedades %]
                             <tr class="leido[% novedad.getLeido %]">
                                 <td>
-                                    <a class="fancy_link" href="[% url_prefix %]/admin/ver_novedad.pl?token=[% token %]&id=[% novedad.id %]">
+                                    <a class="fancy_link" href="[% url_prefix %]/admin/global/ver_novedad_intra.pl?token=[% token %]&id=[% novedad.id %]">
                                         [% novedad.getFechaLegible %]
                                     </a>
                                 </td>
                                 <td>
-                                    <a class="fancy_link" href="[% url_prefix %]/admin/ver_novedad.pl?token=[% token %]&id=[% novedad.id %]">
+                                    <a class="fancy_link" href="[% url_prefix %]/admin/global/ver_novedad_intra.pl?token=[% token %]&id=[% novedad.id %]">
                                         [% novedad.getUsuario%] 
                                     </a>
                                 </td>
                                 <td>
-                                    <a class="fancy_link" href="[% url_prefix %]/admin/ver_novedad.pl?token=[% token %]&id=[% novedad.id %]">
+                                    <a class="fancy_link" href="[% url_prefix %]/admin/global/ver_novedad_intra.pl?token=[% token %]&id=[% novedad.id %]">
                                         [% novedad.getTitulo %] 
                                     </a>
                                 </td>
                                 <td>
-                                    <a class="fancy_link" href="[% url_prefix %]/admin/ver_novedad.pl?token=[% token %]&id=[% novedad.id %]">
+                                    <a class="fancy_link" href="[% url_prefix %]/admin/global/ver_novedad_intra.pl?token=[% token %]&id=[% novedad.id %]">
                                         [% novedad.getResumen %] 
                                     </a>
                                 </td>
