--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialSanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialSanciones.tmpl
@@ -1,6 +1,6 @@
 [% USE HTML %]
 
-[% IF HISTORIAL_SANCIONES %]
+[% IF cant %]
 		<div class="resultados_consulta">[% "Cantidad de registros en el hisotrial de sanciones" | i18n %]: &nbsp;[% cant %]</div> 
 		
 		<div class="contenedor_paginador">[% paginador %]</div>
@@ -82,5 +82,5 @@
 		
 		</table>
 [% ELSE %]
-    <div class="resultados_consulta">[% "No se han registros en el hisotrial de sanciones." | i18n %] &nbsp;[% cant %]</div>
+    <div class="resultados_consulta">[% "No existen registros en el hisotrial de sanciones" | i18n %]</div>
 [% END %] 
