--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -199,12 +199,11 @@ $(document).ready( function() {
     <legend class="titulo_legend">[% "Datos del Indice" | i18n %]</legend>
     <ul style="clear:both">
         <li class="sub_item" >
-            <label for="indice_id">
+<!--            <label for="indice_id">
                 [% "Ingrese el &iacute;ndice:" | i18n %]
-            </label>
+            </label>-->
 
-            <textarea id="indice_id" class="tinymce" rows="10" cols="120" style="width:400px; height: 202px;">
-            </textarea>
+            <textarea id="indice_id" class="tinymce" rows="10" cols="120" style="width:600px; height:202px; max-width:650px"></textarea>
         
             [% PERL %]
                     print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar Indice' | i18n %]",
