--- a/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
@@ -18,18 +18,20 @@
 
 
     function generarVariasEtiquetas(){
-                var selectedItems = new Array();
-                $('#checkEjemplares:checked').each(function(){
-                                                      selectedItems.push($(this).val());
-                                                });
-                                                
-                if (selectedItems.length == 0) {
-                      jAlert('Debe seleccionar al menos un ejemplar','Advertencia de catalogo');
-                } else {  
-                    var id1= selectedItems[0];
-                    var id2= selectedItems[selectedItems.length - 1];
-                    window.open (URL_PREFIX+"/catalogacion/barcode_gen.pl?token="+token+"&id1="+id1+"&id2="+id2,"width=650,height=550,status=no,location=no,menubar=no,personalbar=no,resizable=no,scrollbars=no");
-                }
+
+                   $('#tablaEjemplares').submit();
+//                 var selectedItems = new Array();
+//                 $('#checkEjemplares:checked').each(function(){
+//                                                       selectedItems.push($(this).val());
+//                                                 });
+//                                                 
+//                 if (selectedItems.length == 0) {
+//                       jAlert('Debe seleccionar al menos un ejemplar','Advertencia de catalogo');
+//                 } else {  
+//                     var id1= selectedItems[0];
+//                     var id2= selectedItems[selectedItems.length - 1];
+//                     window.open (URL_PREFIX+"/catalogacion/barcode_gen.pl?token="+token+"&id1="+id1+"&id2="+id2,"width=650,height=550,status=no,location=no,menubar=no,personalbar=no,resizable=no,scrollbars=no");
+//                 }
     }
 
 
@@ -203,6 +205,7 @@
 
     $(document).ready(function() {
         //onEnter con foco en input, ejecuta la busqueda
+        checkedAll("select_all"+"[% id2 %]", "checkEjemplares"+"[% id2 %]");
         onEnter("barcode",consultarPorBarcode);
         onEnter("desde_barcode",consultarPorBarcode);
         onEnter("hasta_barcode",consultarPorBarcode);
