--- a/intranet/htdocs/intranet-tmpl/reports/inventory-sig-topResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/inventory-sig-topResult.tmpl
@@ -7,13 +7,14 @@
 </p>
       
       [% IF cantidad > 0 %]
+        <form id="tablaEjemplares" name="tablaEjemplares" action="[% url_prefix %]/catalogacion/barcode_gen.pl" method="post">
             <table id="tablaResult" class="datos_tabla" border="0" cellspacing="0" cellpadding="0" width="100%">
                 <tr class="titulo_tabla_resultado click">
                     <th>
                           [% PERL %]
                               print C4::AR::Filtros::to_Icon(   
                                                                       boton   => "icon_seleccionar",
-                                                                      id      => "select_all[% id2 %]",
+                                                                      id      => "select_all",
                                                                       title   => "[% 'Seleccionar todos' | i18n %]",
                                                                       alternClass => "botonCentrado"
                                           ) ;
@@ -30,13 +31,14 @@
                     <th onClick="ordenar('ui_poseedora');">[% "Acciones" | i18n %]</th>
                 </tr>
        [% END %]        
-                <form id="tablaEjemplares" name="tablaEjemplares" action="[% url_prefix %]/catalogacion/barcode_gen.pl" method="post">
+                
                 [% FOREACH res IN results %]
                         <tr >
                                 <td>
-                                    <input type="checkbox" id="checkEjemplares" name="checkEjemplares[% res.nivel2.getId2 %]" class="icon_seleccionar" value="[% res.nivel3.codigo_barra%]">
-                                </td>
-                                <td  align="center">
+                                    <input type="checkbox" id="checkEjemplares[% res.nivel2.getId2 %]" name="checkEjemplares[% res.nivel2.getId2 %]" class="icon_seleccionar" value="[% res.nivel3.getId3 %]">
+                               
+                              </td>
+                                <td align="center">
                                         [% res.nivel3.codigo_barra%]
                                 </td>
                                 <td align="center">
@@ -78,9 +80,8 @@
                         </tr>
 
                 [% END %]
-            </form>
             </table>
-   
+           </form>
       [% IF cantidad > 0 %]
               <div class="horizontal">[% "Para los elementos que est&aacute;n marcados:" | i18n %]</div>
          
@@ -89,7 +90,7 @@
                                                           boton   => "icon_exportar",
                                                           onClick => "generarVariasEtiquetas();",
                                                           title   => "[% 'Generar etiquetas de ejemplares' | i18n %]",
-                                                          li => 1,
+                                                         
                               ) ;
               [% END %]
             <div class="buttonContainerHorizontal" style="margin-top:10px;">
