no me pisen mas el intranet topppp

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/historialSanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/historialSanciones.tmpl
@@ -41,7 +41,7 @@
 		    </tr>
 		    
             [% FOREACH historial_sancion IN HISTORIAL_SANCIONES %]
-		    <tr valign=middle align="center">
+		    <tr valign="middle" align="center">
                 <td>
                     [% historial_sancion.usr_responsable.persona.getApeYNom %]
                 </td>
