--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -4630,6 +4630,22 @@ background-color:#E7F3FA;
     -khtml-user-select: none; /* Webkit (Safari, Chrome) */
 }
 
+.impar.marked:hover {
+    background:         #5C82B5;
+    color:              #000000;
+    user-select:        none; /* CSS3 */
+    -moz-user-select:   none; /* Gecko (Firefox) */
+    -khtml-user-select: none; /* Webkit (Safari, Chrome) */
+}
+
+.par.marked:hover {
+    background:         #5C82B5;
+    color:              #000000;
+    user-select:        none; /* CSS3 */
+    -moz-user-select:   none; /* Gecko (Firefox) */
+    -khtml-user-select: none; /* Webkit (Safari, Chrome) */
+}
+
 .par.marked {
     background:     #FFCC99;
     color:          #000000;
