--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -18,6 +18,7 @@
 <li class="columna_der">[% "Ejemplares Prestados:"|i18n %]<strong> [% cantPrestados %]</strong></li>
 </ul>                
 <hr>
+<form id="tablaEjemplares" name="tablaEjemplares" action="[% url_prefix %]/catalogacion/barcode_gen.pl" method="post">
 <table id="tabla_ejemplares[% id2 %]" cellspacing="0" cellpadding="0"  width="100%" class="tablaResult">
 		<tr class="titulo_tabla_resultado">
             <th>
@@ -47,7 +48,8 @@
 
 		<tr align="center">
                 <td>
-                    <input type="checkbox" id="checkEjemplares" name="checkEjemplares[% id2 %]" class="icon_seleccionar" value="[% nivel3_obj.getId3 %]">
+                    <input type="checkbox" id="checkEjemplares[% id2 %]" name="checkEjemplares[% id2 %]" class="icon_seleccionar" value="[% nivel3_obj.getId3 %]">
+
                 </td>
                 <td>[% nivel3_obj.getSignatura_topografica %]</td>
                 <td>
@@ -193,7 +195,7 @@
                     [% END %]
                 </td>
     </tr>
-
+</form>
 [%   IF loop.last %]
 </table>
 
