--- a/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
@@ -202,7 +202,7 @@
 
     $(document).ready(function() {
         //onEnter con foco en input, ejecuta la busqueda
-        checkedAll("select_all", "icon_seleccionar");
+        checkedAll("select_all", "checkEjemplares");
         onEnter("barcode",consultarPorBarcode);
         onEnter("desde_barcode",consultarPorBarcode);
         onEnter("hasta_barcode",consultarPorBarcode);
@@ -214,7 +214,7 @@
         onClickDesdeHastaBarcode();
         onClickDesdeHastaSignatura();
         $('#reporteCreado').hide();
-      
+        
     });
 
 </script>
