--- a/intranet/htdocs/intranet-tmpl/reports/inventory-sig-topResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/inventory-sig-topResult.tmpl
@@ -9,14 +9,14 @@
       [% IF cantidad > 0 %]
         <form id="tablaEjemplares" name="tablaEjemplares" action="[% url_prefix %]/catalogacion/barcode_gen.pl" method="post">
             <table id="tablaResult" class="datos_tabla" border="0" cellspacing="0" cellpadding="0" width="100%">
-                <tr class="titulo_tabla_resultado click">
+                 <tr class="titulo_tabla_resultado click">
                     <th>
                           [% PERL %]
                               print C4::AR::Filtros::to_Icon(   
                                                                       boton   => "icon_seleccionar",
                                                                       id      => "select_all",
                                                                       title   => "[% 'Seleccionar todos' | i18n %]",
-                                                                      alternClass => "botonCentrado"
+                                                                      alternClass => "botonCentrado",
                                           ) ;
                           [% END %]
                     </th>
@@ -35,7 +35,7 @@
                 [% FOREACH res IN results %]
                         <tr >
                                 <td>
-                                    <input type="checkbox" id="checkEjemplares[% res.nivel2.getId2 %]" name="checkEjemplares[% res.nivel2.getId2 %]" class="icon_seleccionar" value="[% res.nivel3.getId3 %]">
+                                    <input type="checkbox" id="checkEjemplares[% res.nivel2.getId2 %]" name="checkEjemplares" class="icon_seleccionar" value="[% res.nivel3.getId3 %]">
                                
                               </td>
                                 <td align="center">
