chequeo de reservas

--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
@@ -118,7 +118,7 @@
 		                    ) ;
 		        [% END %]
 			[% END %]	
-			[% IF algunoSeRenueva %]
+			[% IF algunoSeRenueva>0 && vencidos == 0 %]
 		        [% PERL %]
 		            print C4::AR::Filtros::to_Icon(  
 		                                                boton   => "icon_renovar",
