tipo de documento a id

--- a/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/ticket.tmpl
@@ -37,7 +37,7 @@
         	Documento:
       	</TD>
       	<td>
-       		Tipo:<b>[% socio.persona.getTipo_documento  %]</b> 
+       		Tipo:<b>[% socio.persona.documento.getTipo_documento  %]</b> 
             N&uacute;mero:
             [% IF adicional_selected == "true" %]
                 <b>[% socio.getDni_autorizado %]</b>
