--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/visualizacionIntraTabla.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionINTRA/visualizacionIntraTabla.tmpl
@@ -2,7 +2,8 @@
 
 <table id="tablaVisualizacion" class="tabla_datos" border=0 cellspacing=0 cellpadding=0 width="100%" align="center">
 	<thead>
- 	<tr class="titulo_tabla_resultado">	
+ 	<tr class="titulo_tabla_resultado">
+        <th>[% 'Orden' | i18n %]</th>
 		<th>[% 'Campo' | i18n %]</th>
 		<th>[% 'Subcampo' | i18n %]</th>
 		<th>[% 'Texto Pred' | i18n %]</th>
@@ -17,6 +18,7 @@
 [% FOREACH RESULTSLOOP %]
 	<tr align='center'>
 
+        <td>[% orden %]</td>
 		<td>[% campo %]</td>
 		<td>[% subcampo %]</td>
 		<td>[% textpred %]</td>
