--- a/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/inventory-sig-top.tmpl
@@ -39,7 +39,8 @@
 
 
     function consultarPorBarcode(){
-    
+
+
         //se busca por barcode
         if ( ($("#barcode").val() == "")&&(($("#desde_barcode").val() == "")||($("#hasta_barcode").val() == "")) ){
             jAlert(DEBE_INGRESAR_EL_BARCODE);
@@ -77,6 +78,9 @@
         $('#reporteCreado').hide();
     }
     
+    
+
+
     function consultarPorSignatura(){
      
 
@@ -133,7 +137,7 @@
         objAH.tipoUIBarcode     = $("input[@name='uibarcode']:checked").val();
         //se envia la consulta
         objAH.sendToServer();
-        $('#result').hide();
+//         $('#result').hide();
         $('#reporteCreado').show();
     }
     
@@ -146,6 +150,7 @@
     function updateInfo(responseText){
 	    $("#result").html(responseText);
 	    zebra("datos_tabla");
+        checkedAll("select_all", "checkEjemplares");
     }
 
     function onClickBarcode(){
@@ -200,9 +205,10 @@
         });
     }
 
+
     $(document).ready(function() {
         //onEnter con foco en input, ejecuta la busqueda
-        checkedAll("select_all", "checkEjemplares");
+
         onEnter("barcode",consultarPorBarcode);
         onEnter("desde_barcode",consultarPorBarcode);
         onEnter("hasta_barcode",consultarPorBarcode);
@@ -300,6 +306,7 @@
 </div>
 
 <div id="result"></div>
+
 </fieldset>
 
 [% INCLUDE "intranet-bottom.inc" %]
