--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -318,7 +318,7 @@ $(document).ready(function(){
 
     <div>
         <fieldset>
-            <legend class="titulo_legend_resaltado trigger2 click titulo_legend" title='[% "click para acceder al Historial de Reservas" | i18n %]'>
+            <legend class="titulo_legend_resaltado trigger2 click titulo_legend" title='[% "click para acceder al Historial de Sanciones" | i18n %]'>
                             [% "Historial de Sanciones" | i18n %]
             </legend>   
             <!-- DETALLE DEL HISTORICO DE SANCIONES DEL USUARIO -->
