--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detallePrestamos.tmpl
@@ -1,3 +1,6 @@
+<script type="text/javascript" language="javascript" charset="utf-8">
+checkTr();
+</script>
 [% IF circularDesdeDetalleUsuario == 0 %]
     [% INCLUDE 'partials/usuarios/detallePrestamos-noCirculation.inc' %]
 [% ELSE %]
