--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -108,7 +108,7 @@ $(".indice").fancybox();  */
 		                
 
 <!--                            <a class="inline" href="#indice_data[% id2 %]">Indice</a>-->
-                            <div style="display:none"><div id="indice_data[% id2 %]">[% indice %]</div></div>
+                            <div style="display:none"><div id="indice_data[% id2 %]" style="white-space: pre;">[% indice %]</div></div>
 
 		                <div>
 		                    [% PERL %]
