--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -1,85 +1,88 @@
-[% INCLUDE  "intranet-top.inc" %]
-
-<script src="/intranet-tmpl/includes/circulacion-min.js"></script>
-<script src="/intranet-tmpl/includes/catalogacion-min.js"></script>
-<script src="/intranet-tmpl/includes/detalleEjemplar.js"></script>
-
-<!-- Se incluyen las librerias necesarias para manejar autocomplete -->
-[% INCLUDE "AutocompleteHelper.inc" %]
-[% INCLUDE  'WindowHelper.inc'  %]
-
-<script>
-
-/*=================================================================REVISADO===================================================================*/
-
-
-
-/************************************************FIN CIRCULACUION************************************************/
-
-$(document).ready(function(){
-	inicializar();
-	zebra("tablaResult");
-//     checkedAll("select_all", "checkEjemplares");
-/*$("#contenido_indice").fancybox();
-$("#inline").fancybox();    
-$(".indice").fancybox();  */  
-
-});
-
-</script>
-
-<div id="confirmar_div" class="pane"></div>
-<br>
+[% IF !ajax %]
+    [% INCLUDE  "intranet-top.inc" %]
+    
+    <script src="/includes/jquery/jquery.jqpageflow.js" type="text/javascript"></script>
+    
+    <script type="text/javascript"> 
+        $(document).ready(function(){
+            $("#main_content").flexiPagination({
+                url: "[% url_prefix %]/catalogacion/estructura/detalle.pl?id1=[% id1 %]&ajax=1&token=[% token %]",
+                totalResults: [% cant_total %],
+                perPage: [% per_page %],
+                container: "#marco_contenido_datos",
+                append_loader: "#loading_items",
+                pagerVar : "page",
+                loaderImgPath: imagesForJS+"/loader_grupos.gif",
+                debug : 1
+              });
+            
+             inicializar();
+             zebra("tablaResult");
+            });
+    </script>
 
 
-<!-- PARA PODER CREAR EL FORMULARIO -->
-<div id="formulario"></div>
+	<script src="/intranet-tmpl/includes/circulacion-min.js"></script>
+	<script src="/intranet-tmpl/includes/catalogacion-min.js"></script>
+	<script src="/intranet-tmpl/includes/detalleEjemplar.js"></script>
 
-<div id="detalleMARC"></div>
-
-<div id="detalleComun">
-
-<!-- ---------------Registro de libro TABLE------- -->
-
-
-
-<fieldset>
-	   <legend>[% "Detalles de Nivel 1 registro" | i18n %] [% id1 %]</legend>
-
-	<div id="detalle1" class="detalle1">
-        <div class="botones_detalle_nivel1">
-            [% PERL %]
-                print C4::AR::Filtros::link_to( text =>     C4::AR::Filtros::to_Icon( boton   => "icon_edicion" ),
-                                                url=>"datosDocumento.pl", 
-                                                params =>   ["id1=[% id1 %]","tipoAccion=MODIFICAR_NIVEL_1"],
-                                                title =>    "[% 'Editar Registro' | i18n %]"
-                                            ) ;
-            [% END %]
-        
-            [% PERL %]
-                print C4::AR::Filtros::to_Icon(    
-                                                    boton   => "icon_borrar",
-                                                    onClick => "borrarN1([% id1 %]);",
-                                                    title   => "[% 'Borrar Nivel 1' | i18n %]",
-                        ) ;
-            [% END %]
-        </div>
-	    
-	    <ul class="listado_sin_margen">
-		    [% FOREACH nivel1 %]
-
-		            [% IF liblibrarian %]
-		                [% IF dato %]
-		                <li>    [% liblibrarian %]: <strong>[% dato %]</strong> </li>
-		                [% END %]
-		            [% END %]
-
-		    [% END %]
-	    </ul>
-
-		[% "N&uacute;mero Total de Ejemplares" | i18n %]:<b> [% cantItemN1 %]</b> 
-	</div>
-</fieldset>
+	<!-- Se incluyen las librerias necesarias para manejar autocomplete -->
+	[% INCLUDE "AutocompleteHelper.inc" %]
+	[% INCLUDE  'WindowHelper.inc'  %]
+	
+	<div id="confirmar_div" class="pane"></div>
+	<br>
+	
+	
+	<!-- PARA PODER CREAR EL FORMULARIO -->
+	<div id="formulario"></div>
+	
+	<div id="detalleMARC"></div>
+	
+	<div id="detalleComun">
+	
+	<!-- ---------------Registro de libro TABLE------- -->
+	
+	
+	
+	<fieldset>
+		   <legend>[% "Detalles de Nivel 1 registro" | i18n %] [% id1 %]</legend>
+	
+		<div id="detalle1" class="detalle1">
+	        <div class="botones_detalle_nivel1">
+	            [% PERL %]
+	                print C4::AR::Filtros::link_to( text =>     C4::AR::Filtros::to_Icon( boton   => "icon_edicion" ),
+	                                                url=>"datosDocumento.pl", 
+	                                                params =>   ["id1=[% id1 %]","tipoAccion=MODIFICAR_NIVEL_1"],
+	                                                title =>    "[% 'Editar Registro' | i18n %]"
+	                                            ) ;
+	            [% END %]
+	        
+	            [% PERL %]
+	                print C4::AR::Filtros::to_Icon(    
+	                                                    boton   => "icon_borrar",
+	                                                    onClick => "borrarN1([% id1 %]);",
+	                                                    title   => "[% 'Borrar Nivel 1' | i18n %]",
+	                        ) ;
+	            [% END %]
+	        </div>
+		    
+		    <ul class="listado_sin_margen">
+			    [% FOREACH nivel1 %]
+	
+			            [% IF liblibrarian %]
+			                [% IF dato %]
+			                <li>    [% liblibrarian %]: <strong>[% dato %]</strong> </li>
+			                [% END %]
+			            [% END %]
+	
+			    [% END %]
+		    </ul>
+	
+			[% "N&uacute;mero Total de Ejemplares" | i18n %]:<b> [% cantItemN1 %]</b> 
+		</div>
+	</fieldset>
+[% END %] <!-- End de If ajax  -->
 [% FOREACH nivel2 %]
 
         <div id="fieldset_grupo[% id2 %]">
@@ -152,10 +155,11 @@ $(".indice").fancybox();  */
         </div>
 
 [% END %]<!-- END FOREACH Nivel 2-->
-
 </div> <!-- Fin DIV detalleComun -->
-<div id='basic-modal-content'></div>
-<!-- para mostrar el contenido del indice -->
-
-
-[% INCLUDE  "intranet-bottom.inc" %]
+[% IF !ajax %]
+	<div id='basic-modal-content'></div>
+	<!-- para mostrar el contenido del indice -->
+	
+	
+	[% INCLUDE  "intranet-bottom.inc" %]
+[% END %]
