--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -8,6 +8,39 @@ body,html {
 	background-color: #EAEBED;
 }
 
+
+.loading_items{
+    margin: 0 auto;
+    width: 300px;   
+}
+
+#jqpageflow-block{
+    width: 600px;
+    clear: both;
+    margin: 0 auto;
+    display: none;
+}
+
+#jqpageflow-block img{
+    clear: both;
+}
+
+.jqpageflow-loader {
+    position: relative; 
+    display: none; 
+    right: 1%; 
+    z-index: 10001; 
+    bottom: 0;
+}
+
+.jqpageflow-loadertext {
+    font-size: 18px; 
+    width: 100%;  
+    text-align: center; 
+    position: relative; 
+}
+
+
 .info_paginador{
     margin: 0 auto;
     width: 40%;
