--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -56,7 +56,7 @@
                 [% PERL %]
                     print C4::AR::Filtros::link_to( text => "[% nivel3_obj.getBarcode %]",
                                                     url=>"[% url_prefix %]/catalogacion/estructura/detalleEjemplar.pl", 
-                                                    params =>   ["id3=[% id3 %]&id1=[% id1 %]"],
+                                                    params =>   ["id3=[% id3 %]"],
                                                     title =>    "[% 'Detalle del ejemplar' | i18n %]"
                                                 ) ;
                 [% END %]
