--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -1885,8 +1885,20 @@ p.caption {clear:both;
     background: none repeat scroll 0 0 #F5E6E6;
 }
 
+.sanciones_opac_main hr{
+   color: #FE2E2E;
+}
 
 
+.fecha_cumple {
+    color: green;
+    font-weight: bold;
+}
+
+.fecha_vencida {
+    font-size: 10pt;
+    color: red;
+}
 
 /* mensajes de error */
 em.error_adv{background:transparent url(../imagenes/error.gif) no-repeat scroll 0 0;
