--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -118,5 +118,8 @@
                       </li>
                   </ul>
     </fieldset>
+   <a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]">
+                                   Publicar en Twitter
+  </a>
 [% END %]
 [% INCLUDE 'intranet-bottom.inc' %]
