--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -8,6 +8,9 @@ body,html {
 	background-color: #EAEBED;
 }
 
+.novedad_contacto{
+    width: 300px;	
+}
 
 .loading_items{
     margin: 0 auto;
@@ -1553,13 +1556,13 @@ fieldset.accionesUsuarios {
 	font-family: Arial, Helvetica, sans-serif;
 	padding-right: 20px;
 /* Nuevo, con el acabado abrazador. Si no gusta, sacar desde acá para abajo */ 
-	background: url("images/fondo_label.png") repeat-x scroll 0 0 transparent;
-    height: 36px;
-    max-width: 427;
-	margin-left: -17px;
-    margin-top: 9px;
-    padding-left: 15px;
-    top:0.9px;  	
+/* 	background: url("images/fondo_label.png") repeat-x scroll 0 0 transparent; */
+/*     height: 36px; */
+/*     max-width: 427; */
+/* 	margin-left: -17px; */
+/*     margin-top: 9px; */
+/*     padding-left: 15px; */
+/*     top:0.9px;  	 */
 }
 
 .titulo_legend_resaltado {
