varios fixes en mail

--- a/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
+++ b/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
@@ -27,7 +27,7 @@
 			        <a class="sitelogo" href="http://[% SERVER_ADDRESS %]/[% url_prefix %]/opac-main.pl" title="Ir al inicio"></a> 
 			        <div class="sitename"> 
 			          <h1><a href="http://[% SERVER_ADDRESS %]/[% url_prefix %]/opac-main.pl" title="Ir al inicio">MERAN &bull; 
-			          <span style="font-weight:normal;font-size:50%;">&nbsp;[% ui.getNombre %]</span></a></h1> 
+			          <span style="font-weight:normal;font-size:50%;">&nbsp;[% ui.getNombrePDF %]</span></a></h1> 
 			          <h2>Cat&aacute;logo P&uacute;blico</h2> 
 			        </div> 
 			  
