--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -2,6 +2,11 @@
 
 [% INCLUDE  'AutocompleteHelper.inc'  %]
 
+<link rel="stylesheet" type="text/css" href="[% temas %]/[% tema %]/includes/css/fancybox/jquery.fancybox.css">
+<script src="/includes/jquery/fancybox/jquery.fancybox-1.2.1.pack.js"></script>
+<script src="/includes/jquery/jquery.textareaCounter.js"></script>
+
+
 <script type="text/javascript">
 	$(document).ready(function() {
 		CrearAutocompleteCatalogo({ 
@@ -16,12 +21,20 @@
             'frameHeight':  500,
         });
 
-      });
+      mostrarNovedades();
 
-    $(document).ready(function() {
-          mostrarNovedades();
-        
-    });
+     var options2 = {
+                        'maxCharacterSize': 140,
+                        'originalStyle': 'originalTextareaInfo',
+                        'warningStyle' : 'warningTextareaInfo',
+                        'warningNumber': 40,
+                        'displayFormat' : '#input/#max | #words words'
+                };
+     $('#post_twitter').textareaCount(options2);
+  });
+
+
+  
   
     function mostrarNovedades(){
             objAH               = new AjaxHelper(updateActualizarTabla);
@@ -30,7 +43,7 @@
 
             objAH.tipoAccion    = "MOSTRAR_NOVEDADES";
             objAH.sendToServer();
-        }
+    }
 
     function updateActualizarTabla(responseText){
         $("#resultNovedades").html(responseText);
@@ -117,9 +130,10 @@
                         
                       </li>
                   </ul>
-    </fieldset>
-   <a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]">
+    </fieldset>   
+    <a class="fancy_link" href="[% url_prefix %]/admin/publicar_twitter.pl?token=[% token %]">
                                    Publicar en Twitter
-  </a>
+    </a>
+  
 [% END %]
 [% INCLUDE 'intranet-bottom.inc' %]
