--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -103,7 +103,7 @@
 
                             [% PERL %]
                                                 print C4::AR::Filtros::to_Icon(  
-                                                                                    boton   => "icon_edicion",
+                                                                                    boton   => "icon_indice",
                                                                                     onClick => "mostrarIndice([% id2 %]);",
                                                                                     title   => "[% 'Ver &iacute;ndice' | i18n %]",
                                                         ) ;
