--- a/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/publicar_twitter.tmpl
@@ -1,9 +1,21 @@
+<script>
+
+  $(document).ready(function() {
+      $("post_twitter").charCount({
+          allowed: 140,        
+          warning: 20,
+          counterText: 'Characters left: '    
+      });
+ });
+
+</script>
 <div class="fancybox_twitter">
     <fieldset>
          <form action="[% url_prefix %]/twitter.pl" method="post">
+            <div class="counter">140</div>
             <legend>[% 'Cuerpo del mensaje' | i18n %]:</legend>
             <textarea id="post_twitter" name="post_twitter" rows="5" cols="40"></textarea>
-            <div class="charleft originalDisplayInfo" style="width: 437px;">5 Characters | 195 Characters Left | 1 Words</div>
+            
             <input type="submit" value="Enviar">
          </form>
     </fieldset>
