--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
@@ -110,7 +110,7 @@
 <li class="sub_item">
      <label for="id_ciudad"> [% "Ciudad" | i18n %] * </label>
             <input class="required" type=text id="ciudad" name="ciudad" value="[% socio_modificar.persona.ciudad_ref.getNombre %]" size="25"  >
-            <input type="hidden" id="id_ciudad" name="id_ciudad" value="[% socio_modificar.persona.ciudad_ref.id %]">
+            <input class="required" type="hidden" id="id_ciudad" name="id_ciudad" value="[% socio_modificar.persona.ciudad_ref.id %]">
 </li>
 <li class="sub_item">
  <label for="telefono">           [% "Tel&eacute;fono particular" | i18n %] </label>
